--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,12 @@
 ---
-title: "New_DSI_quartoblog"
+title: "News and Events"
 listing:
   contents: posts
   sort: "date desc"
   type: default
   categories: true
   sort-ui: false
-  filter-ui: false
+  filter-ui: true
 page-layout: full
 title-block-banner: true
 ---
